# hivecmd

./: .gitignore  README.md  package.json  pyproject.toml  skill.md
skills/hivecmd/: SKILL.md
src/: __init__.py  __main__.py
src/board/: collector.py  gource.py  renderer.py  server.py  web.py
src/cli/: __init__.py  agent.py  board.py  gource.py  inbox.py  leader.py  lifecycle.py  mcp.py  pipeline.py  preset.py  spawn.py  task.py  team.py  team_templates.py
src/config/: __init__.py  preset.py
src/core/: __init__.py  config.py  fileutil.py  identity.py  paths.py  store.py  workspace.py
src/mcp/: __init__.py  server.py
src/services/: llm.py
src/skills/: SKILL.md
src/skills/agent-creator-design/: SKILL.md
src/skills/hivecmd/: SKILL.md  __init__.py  config.yaml
src/spawn/: dependency.py  lifecycle.py  scheduler.py  tmux.py  worktree.py
src/system-prompts/leader/: prompt.md
src/team/: clone.py  templates.py
src/templates/: __init__.py  hedge_fund.py  webapp.py
src/transport/: __init__.py  events.py  p2p.py
tests/: __init__.py  test_board.py  test_config.py  test_identity.py  test_spawn.py
website/: index.html  package.json  vite.config.mjs
website/src/: App.jsx
