[project]
name = "hivecmd"
version = "1.0.0"
description = "Agent Swarm Intelligence CLI"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12.0",
  "pydantic>=2.0.0",
  "rich>=13.0.0",
]

[project.scripts]
hivecmd = "hivecmd.__main__:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
